ensure good contrast ratio

--- a/assets/scss/now-ui-kit.scss
+++ b/assets/scss/now-ui-kit.scss
@@ -16,6 +16,7 @@
  */
  
 // CUSTOM VALUES
+$default-color:              #585858;
 $dark-gray:                  #737373;
 $primary-color:              #dc3600;
 $danger-color:               #e22b2b;
